@@ -16,6 +16,7 @@
 - fix direct mount stale instance flag reset.
 - fix direct map expire not set for initail empty map.
 - fix missing source sss in multi map lookup.
+- fix update_hosts_mounts() return.
 
 21/04/2015 autofs-5.1.1
 =======================
